--- a/Maui/SimpleWeather.Maui/Main/WeatherNow.xaml
+++ b/Maui/SimpleWeather.Maui/Main/WeatherNow.xaml
@@ -1,12 +1,45 @@
-<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+﻿<?xml version="1.0" encoding="utf-8" ?>
+<localControls:ScopePage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="SimpleWeather.Maui.Main.WeatherNow"
-             Title="WeatherNow">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
-</ContentPage>
+             xmlns:localControls="clr-namespace:SimpleWeather.Maui.Controls">
+    <Grid x:Name="MainGrid">
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition x:Name="BannerRow" Height="Auto" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+            <Image x:Name="BackgroundOverlay" Grid.RowSpan="2">
+
+            </Image>
+            <Grid x:Name="GradientOverlay" Grid.RowSpan="2">
+                <Grid.Background>
+                    <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1">
+                        <LinearGradientBrush.GradientStops>
+                            <GradientStop Offset="0" Color="#50000000" />
+                            <GradientStop Offset="1" Color="#FF000000" />
+                        </LinearGradientBrush.GradientStops>
+                    </LinearGradientBrush>
+                </Grid.Background>
+            </Grid>
+            <ScrollView x:Name="MainViewer" Grid.Row="1">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <!--  Row 0  -->
+                        <RowDefinition x:Name="LocationRow" Height="Auto" />
+                        <!--  Row 1  -->
+                        <RowDefinition x:Name="UpdateDateRow" Height="Auto" />
+                        <!--  Row 2  -->
+                        <RowDefinition x:Name="AlertButtonRow" Height="Auto" />
+                        <!--  Row 3  -->
+                        <RowDefinition x:Name="SpacerRow" Height="*" />
+                        <!--  Row 4  -->
+                        <RowDefinition x:Name="ConditionPanelRow" Height="Auto" />
+                        <!--  Row 5  -->
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+                </Grid>
+            </ScrollView>
+        </Grid>
+    </Grid>
+</localControls:ScopePage>
