--- a/Maui/SimpleWeather.Maui/Preferences/IconRadioPreference.xaml
+++ b/Maui/SimpleWeather.Maui/Preferences/IconRadioPreference.xaml
@@ -1,8 +1,9 @@
-<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentView
     x:Class="SimpleWeather.Maui.Preferences.IconRadioPreference"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:controls="clr-namespace:SimpleWeather.Maui.Controls">
     <ContentView.GestureRecognizers>
         <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped" />
         <ClickGestureRecognizer Clicked="ClickGestureRecognizer_Clicked" />
@@ -20,7 +21,9 @@
                 x:Name="IconPreference"
                 Padding="5"
                 FontSize="16" />
-            <HorizontalStackLayout x:Name="IconContainer" />
+            <HorizontalStackLayout x:Name="IconContainer">
+                <controls:IconControl WeatherIcon="&#xf00d;" />
+            </HorizontalStackLayout>
         </VerticalStackLayout>
     </HorizontalStackLayout>
 </ContentView>
