--- a/Maui/SimpleWeather.Maui/Preferences/Settings_Units.xaml
+++ b/Maui/SimpleWeather.Maui/Preferences/Settings_Units.xaml
@@ -1,29 +1,36 @@
-<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage
     x:Class="SimpleWeather.Maui.Preferences.Settings_Units"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:res_strings="clr-namespace:SimpleWeather.Resources.Strings;assembly=SimpleWeather.Shared"
-    BackgroundColor="{AppThemeBinding Light={StaticResource LightSurface},
-                                      Dark={StaticResource DarkSurface}}">
+    Title="{x:Static res_strings:Resources.pref_title_units}"
+    BackgroundColor="{AppThemeBinding Light={DynamicResource WhiteBrush},
+                                      Dark={StaticResource BlackBrush}}"
+    Shell.NavBarIsVisible="True">
+
     <Grid>
-        <ScrollView Padding="16,0" HorizontalScrollBarVisibility="Never">
+        <ScrollView Padding="16" HorizontalScrollBarVisibility="Never">
             <VerticalStackLayout>
-                <Label Style="{DynamicResource SettingsTitleStyle}" Text="{x:Static res_strings:Resources.pref_title_units}" />
-                <Label Padding="0,5" Text="{x:Static res_strings:Resources.label_temperature}" />
+                <Label Padding="0,5" Text="{x:Static res_strings:Resources.label_temperature}"
+                       FontSize="Header"/>
                 <HorizontalStackLayout x:Name="TemperatureUnits" />
-                <Label Padding="0,5" Text="{x:Static res_strings:Resources.label_speed}" />
+                <Label Padding="0,5" Text="{x:Static res_strings:Resources.label_speed}"
+                       FontSize="Header" />
                 <HorizontalStackLayout x:Name="SpeedUnits" />
-                <Label Padding="0,5" Text="{x:Static res_strings:Resources.label_distance}" />
+                <Label Padding="0,5" Text="{x:Static res_strings:Resources.label_distance}"
+                       FontSize="Header" />
                 <HorizontalStackLayout x:Name="DistanceUnits" />
-                <Label Padding="0,5" Text="{x:Static res_strings:Resources.label_precipitation}" />
+                <Label Padding="0,5" Text="{x:Static res_strings:Resources.label_precipitation}"
+                       FontSize="Header" />
                 <HorizontalStackLayout x:Name="PrecipitationUnits" />
-                <Label Padding="0,5" Text="{x:Static res_strings:Resources.label_pressure}" />
+                <Label Padding="0,5" Text="{x:Static res_strings:Resources.label_pressure}"
+                       FontSize="Header" />
                 <HorizontalStackLayout x:Name="PressureUnits" />
                 <Rectangle Style="{DynamicResource SettingsDividerStyle}" />
                 <Label
                     x:Name="ResetTitle"
-                    Style="{DynamicResource PrefTitleStyle}"
+                    FontSize="Header"
                     Text="{x:Static res_strings:Resources.pref_title_resetunits}" />
                 <HorizontalStackLayout Padding="0,5">
                     <Button
