--- a/Maui/SimpleWeather.Maui/Radar/RadarToolbar.xaml
+++ b/Maui/SimpleWeather.Maui/Radar/RadarToolbar.xaml
@@ -1,11 +1,10 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8" ?>
 <ContentView
     x:Class="SimpleWeather.Maui.Radar.RadarToolbar"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:SimpleWeather.NET.Radar"
     xmlns:matIcons="clr-namespace:SimpleWeather.Maui.MaterialIcons">
-
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
