--- a/Maui/SimpleWeather.Maui/Main/WeatherAlertPage.xaml
+++ b/Maui/SimpleWeather.Maui/Main/WeatherAlertPage.xaml
@@ -1,13 +1,39 @@
-<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage
     x:Class="SimpleWeather.Maui.Main.WeatherAlertPage"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    Title="WeatherAlertPage">
-    <VerticalStackLayout>
-        <Label
-            HorizontalOptions="Center"
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" />
-    </VerticalStackLayout>
+    xmlns:res_strings="clr-namespace:SimpleWeather.Resources.Strings;assembly=SimpleWeather.Shared"
+    xmlns:localControls="clr-namespace:SimpleWeather.Maui.Controls"
+    xmlns:controls="clr-namespace:SimpleWeather.Common.Controls;assembly=SimpleWeather.Common"
+    Title="{x:Static res_strings:Resources.title_fragment_alerts}"
+    Shell.NavBarIsVisible="True">
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <VerticalStackLayout Grid.Row="0">
+            <localControls:ViewBox HeightRequest="48" HorizontalOptions="Start">
+                <Label Padding="16" FontSize="16" HorizontalTextAlignment="Start" HorizontalOptions="Start"
+                       Text="{x:Bind WNowViewModel.Weather.Location, FallbackValue='New York, NY', Mode=OneWay}" />
+            </localControls:ViewBox>
+            <Rectangle HeightRequest="1" StrokeThickness="1" Stroke="{AppThemeBinding Light={StaticResource LightOutline}, Dark={StaticResource DarkOutline}}" />
+        </VerticalStackLayout>
+
+        <ScrollView Grid.Row="1" Padding="8" HorizontalScrollBarVisibility="Never">
+            <VerticalStackLayout x:Name="StackControl" HorizontalOptions="FillAndExpand" BindableLayout.ItemsSource="{x:Bind AlertsView.Alerts, Mode=OneWay}">
+                <BindableLayout.EmptyView>
+                    <Label Padding="4" Text="{x:Static res_strings:Resources.NoWeatherAlerts_Prompt_Text}" />
+                </BindableLayout.EmptyView>
+                <BindableLayout.ItemTemplate>
+                    <DataTemplate>
+                        <Border Stroke="Transparent" StrokeThickness="0.5">
+                            <localControls:WeatherAlertPanel />
+                        </Border>
+                    </DataTemplate>
+                </BindableLayout.ItemTemplate>
+            </VerticalStackLayout>
+        </ScrollView>
+    </Grid>
 </ContentPage>
