--- a/Maui/SimpleWeather.Maui/Main/WeatherNow.xaml
+++ b/Maui/SimpleWeather.Maui/Main/WeatherNow.xaml
@@ -3,25 +3,35 @@
     x:Class="SimpleWeather.Maui.Main.WeatherNow"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:dataBinding="clr-namespace:SimpleWeather.Maui.DataBinding"
     xmlns:localControls="clr-namespace:SimpleWeather.Maui.Controls"
     xmlns:matIcons="clr-namespace:SimpleWeather.Maui.MaterialIcons"
     xmlns:res_strings="clr-namespace:SimpleWeather.Resources.Strings;assembly=SimpleWeather.Shared"
     xmlns:uwpUtils="clr-namespace:SimpleWeather.NET.Utils"
     xmlns:viewModels="clr-namespace:SimpleWeather.Common.ViewModels;assembly=SimpleWeather.Common"
+    Shell.NavBarIsVisible="True"
+    Title="{x:Static res_strings:Resources.label_nav_weathernow}"
     x:DataType="viewModels:WeatherNowViewModel">
+    <ContentPage.ToolbarItems>
+        <ToolbarItem Text="{x:Static res_strings:Resources.action_refresh}"
+                     IsEnabled="{Binding Source={x:Reference LoadingRing}, Path='IsRunning', Converter={StaticResource inverseBoolConverter}}"
+                     IconImageSource="{matIcons:MaterialIcon Symbol=Refresh, Size=24, FontAutoScalingEnabled=True}"
+                     Clicked="RefreshBtn_Clicked" />
+    </ContentPage.ToolbarItems>
     <Grid x:Name="MainGrid">
         <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
             <RowDefinition x:Name="BannerRow" Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <Grid Grid.Row="1">
+        <Grid Grid.Row="2">
             <Image
                 x:Name="BackgroundOverlay"
-                Grid.RowSpan="2"
+                Grid.RowSpan="3"
                 IsVisible="{x:Bind uwpUtils:FeatureSettings.BackgroundImage, Mode=OneWay}" />
             <Grid
                 x:Name="GradientOverlay"
-                Grid.RowSpan="2"
+                Grid.RowSpan="3"
                 IsVisible="{x:Bind uwpUtils:FeatureSettings.BackgroundImage, Mode=OneWay}">
                 <Grid.Background>
                     <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1">
@@ -34,7 +44,7 @@
             </Grid>
             <ScrollView
                 x:Name="MainViewer"
-                Grid.Row="1"
+                Grid.Row="2"
                 IsVisible="{Binding Weather.Location, Mode=OneWay, Converter={StaticResource stringBooleanConverter}}"
                 SizeChanged="MainViewer_SizeChanged">
                 <Grid>
@@ -66,7 +76,7 @@
                             x:Name="GPSIcon"
                             Grid.Column="0"
                             Margin="16,0"
-                            IsVisible="{Binding UiState.IsGPSLocation, Mode=OneWay}"
+                            IsVisible="{Binding UiState.IsGPSLocation, TargetNullValue=false, FallbackValue=false, Mode=OneWay}"
                             VerticalOptions="Center">
                             <Image HeightRequest="24" WidthRequest="24">
                                 <Image.Source>
@@ -107,7 +117,7 @@
                     <Grid
                         x:Name="AlertButton"
                         Grid.Row="2"
-                        Margin="0,5,0,5"
+                        Padding="5"
                         BackgroundColor="OrangeRed"
                         HorizontalOptions="FillAndExpand"
                         MaximumWidthRequest="1280">
@@ -120,7 +130,7 @@
                             <ColumnDefinition Width="*" />
                             <ColumnDefinition Width="50" />
                         </Grid.ColumnDefinitions>
-                        <Image Grid.Column="0" Margin="5,2,5,0">
+                        <Image Grid.Column="0" Margin="5">
                             <Image.Source>
                                 <matIcons:MaterialIcon Symbol="Error" Color="White" />
                             </Image.Source>
@@ -247,23 +257,43 @@
                                 Fill="Transparent"
                                 HeightRequest="360"
                                 MaximumWidthRequest="640"
-                                ZIndex="1" />
+                                ZIndex="1">
+                                <Rectangle.GestureRecognizers>
+                                    <TapGestureRecognizer Tapped="RadarWebView_Tapped" />
+                                    <ClickGestureRecognizer Clicked="RadarWebView_Clicked" />
+                                </Rectangle.GestureRecognizers>
+                            </Rectangle>
                             <Border
                                 x:Name="RadarWebViewContainer"
                                 HeightRequest="360"
-                                MaximumWidthRequest="640" />
+                                MaximumWidthRequest="640"
+                                Loaded="RadarWebView_Loaded" />
                         </Grid>
+                        <Label Padding="10" HorizontalTextAlignment="Center"
+                               Text="{Binding Weather.WeatherCredit, FallbackValue='Data from Weather Provider', Mode=OneWay}" />
                     </VerticalStackLayout>
                 </Grid>
             </ScrollView>
         </Grid>
+        <ActivityIndicator x:Name="ContentRing"
+                           Grid.RowSpan="3"
+                           HorizontalOptions="Center"
+                           VerticalOptions="Center"
+                           IsRunning="{x:Bind dataBinding:WeatherNowBinding.IsLoadingRingActive(UiState), Mode=OneWay}" />
+        <ActivityIndicator x:Name="LoadingRing"
+                           Grid.RowSpan="3"
+                           HorizontalOptions="Center"
+                           VerticalOptions="Center"
+                           IsRunning="{Binding UiState.IsLoading, Mode=OneWay}"
+                           IsVisible="{x:Bind dataBinding:WeatherNowBinding.IsViewVisible(UiState), Mode=OneWay}"/>
         <Grid
             x:Name="BannerContainer"
-            Grid.Row="0"
+            Grid.Row="1"
             VerticalOptions="Start"
             ZIndex="0" />
         <Grid
             x:Name="SnackbarContainer"
+            Grid.Row="1"
             Grid.RowSpan="2"
             VerticalOptions="End"
             ZIndex="1" />
